--- a/express-sqlite-charts/values.yaml
+++ b/express-sqlite-charts/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: ademxzaghouane/express-sqlite-app
+  repository: ademxzaghouane/express-sqlite-app:latest
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
