--- a/express-sqlite-charts/values.yaml
+++ b/express-sqlite-charts/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: ademxzaghouane/express-sqlite-app:latest
+  repository: ademxzaghouane/express-sqlite-app
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
